2006-09-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* AvrCommon.am (AVRLIB_CFLAGS): Use -gstabs rather than -g here as
	well, as it's already been in AVRLIB_ASFLAGS.  Without that, using
	a compiler that defaults to DWARF-2 yielded an interesting mix of
	both, DWARF-2 and stabs debugging information in the library.

2006-09-27 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/interrupt.h (ISR_ALIAS): Add ISR_ALIAS() macro.
	Fix doxygen style for the other ISR macros.
	Closes bug #17608: Add ISR_ALIAS() to avr/interrupt.h

2006-09-20 Eric B. Weddington <eweddington@cso.atmel.com>

	* configure.ac (CHECK_PNG_UTILS): Fix string echo for checking pnmtopng. 
	Fix check for pngtopnm and pnmtopng programs. Add self to authors.
	* doc/api/doxygen.config.in (IMAGE_PATH): Add correct directories.
	* doc/api/doxygen.config.in (LATEX_BATCHMODE): Change to yes so latex will
	run in a batch mode and not query the user if something is amiss.
	* doc/api/tools-install.dox: Remove doxygen warning.
	* doc/examples/asmdemo/asmdemo.dox: Ditto.
	* doc/api/Makefile.am (fix_png): Use the actual RGB numbers instead of
	the color name in case the rgb.txt file cannot be found.
	* doc/api/Makefile.am (doxygen.confg): Remove the dependency on 
	$(top_srcdir)/stamp-h1 as there is no rule in this Makefile to build it, 
	which causes an error. The rule is located in the top level Makefile.

2006-09-14 Eric B. Weddington <eweddington@cso.atmel.com>

	* doc/api/faq.dox: Add question about why there are five different 
	linker scripts.

2006-09-13 Eric B. Weddington <eweddington@cso.atmel.com>

	Patch #4461 by Anatoly Sokolov <aesok@post.ru>
	* configure.ac: Add support for new devices: ATmega2560, ATmega2561.
	* devtools/gen-avr-lib-tree.sh: Ditto.
	* doc/api/main_page.dox: Ditto.
	* doc/api/using-tools.dox: Ditto.
	* include/avr/Makefile.am: Ditto.
	* include/avr/io.h: Ditto.
	* include/avr/wdt.h: Ditto.
	* include/avr/iom2560.h (New File): Ditto.
	* include/avr/iom2561.h (New File): Ditto.
